fix: Some minor changes to config files for enable build process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "declaration": true,
-    "emitDeclarationOnly": false,
-    "declarationDir": "./dist",
-    "outDir": "./dist",
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "dist/src",
+    "outDir": "dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
