--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run copy:src",
+    "copy:src": "cpx \"src/**/*.{ts,tsx,css,scss}\" dist/src",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -37,6 +38,7 @@
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
     "chromatic": "^11.28.2",
+    "cpx": "^1.2.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -47,6 +49,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.3"
   },
@@ -58,5 +61,18 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "main": "dist/zip-components.umd.js",
+  "module": "dist/zip-components.es.js",
+  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/zip-components.es.js",
+      "require": "./dist/zip-components.umd.js"
+    },
+    "./src/*": {
+      "import": "./dist/src/*.tsx",
+      "types": "./dist/src/*.d.ts"
+    }
   }
 }
